# TWON-Agents

./: .gitignore  Makefile  README.md  Readme.md  config.toml  pyproject.toml  requirements.txt  setup.py
api/: __init__.py  bck__init__.py  config.py  config.toml  gunicorn_server  huggingface.py
api/bck_routes/: __init__.py
api/docs/: index.md  reply.md
data/personas/: activist.json  alt_right.json  antifa.json  bystander.json  confirmation_seeker.json  dutch.alt_right.json  dutch.conservative.json  dutch.liberal.json  dutch.neutral.json  english.conservative.json  expert.json  fact_checker.json  german.alt_right.json  german.conservative.json  german.liberal.json  german.neutral.json  memer.json  polarizer.json  troll.json
data/prompts/: dutch.generate.txt  dutch.like.txt  dutch.reply.txt  english.generate.txt  english.like.txt  english.reply.txt  generate.txt  german.generate.txt  german.like.txt  german.reply.txt  like.txt  reply.txt
docs/: Root.md  __index__.md  agents.post.md  generate.md  like.md  personas.md
examples/: 0.0--Generate-Basic.ipynb  0.1--Basic-Inference.ipynb  0.2--Simple-Dialog-Inference.ipynb  1.0--Reply-Basic.ipynb  1.1--Reply-Dialog.ipynb  __playground.ipynb
experiments/Etmaal-2024/: 0.0-Data-Generation.ipynb  0.1-Data-Processing.ipynb  0.2-Data-Status.ipynb  0.3-Data-Analysis.ipynb  Preliminary.ipynb  dataset.dutch.json  dataset.english.json  dataset.full.json  dataset.full.parquet  dataset.german.json  dataset.json  dataset.parquet
experiments/PreSimulation-2024/: 0.0-Data-Generation.ipynb  0.1-Data-Processing.ipynb  0.2-Data-Status.ipynb  0.3-Argument-Mining.ipynb  0.4-Argument-Embedding extraction.ipynb  argument_embeddings.by.persona.English.csv  argument_embeddings.by.persona.English.parquet  argument_embeddings.by.retrieved_source.English.csv  argument_embeddings.by.retrieved_source.English.parquet  dataset.dutch.json  (+13 more)
notebooks/: 0.1-Database-Debugging.ipynb  00--MdB-Data.ipynb  00--Twitter-Germany-Data-Processing.ipynb  00--Twitter-Germany-MdBTweets-Processing.ipynb  00--Twitter-Germany-Replies-Processing.ipynb  001--MdB-Data.ipynb  002--Twitter-Germany-MdBTweets-Processing.ipynb  003--Twitter-Germany-Replies-Processing.ipynb  01--Dataset-Generation.ipynb  01--Instruct-Training.ipynb  01--Model-Testing.ipynb  011--Dataset-Generation.ipynb  021--Post-Task-Training.ipynb  022--Post-Task-Evaluation.ipynb  022--Reply-Task-Training.ipynb  023--Post-Task-Testing.ipynb  023--Reply-Task-Testing.ipynb  023--Reply-Task-Training.ipynb
src/: .gitignore  __init__.py  __main__.py  article.py  auth.py  config.py  database.py  docs.py  inference.py  integration.py  persona.py  response.py  schemas.py  services.py
static/: swagger-ui.css
tests/: test_agents.py  test_history.py  test_models.py  test_schemas_platform.py  test_thread.py
(+156 files in other folders)
