[tool.poetry]
name = "TWON-Agents"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    "Simon Münker <muenker@uni-trier.de>"
]
readme = "README.md"
homepage = "https://agents.twon.unit-trier.de"
repository = "https://github.com/cl-trier/TWON-Agents"

[tool.poetry.dependencies]
python = "^3.10.0"
python-dotenv = "^1.0.0"
pydantic = "^2.10.4"
tqdm = "^4.66.1"
requests = "^2.31.0"
cltrier-lib = "^0.1.7"
pandas = "^2.2.0"
torch = "^2.5.1"
transformers = "^4.47.1"
sentence-transformers = "^3.2.0"
huggingface-hub = "^0.27.0"
bitsandbytes = "^0.43.3"
evaluate = "^0.4.3"
peft = "^0.12.0"
trl = "^0.11.4"
openai = ">=1.3.7"
ollama = ">=0.1.6"
fastapi = ">=0.109.2"
uvicorn = ">=0.23.2"
gunicorn = ">=21.2.0"
gnews = ">=0.3.6"
newspaper3k = ">=0.2.8"
tabulate = ">=0.9.0"
pyreadr = "^0.5.2"
fsspec = "2023.9.2"
ipywidgets = "^8.1.5"

[tool.pytest.ini_options]
pythonpath = ["."]
log_cli = true
log_cli_level = "INFO"
filterwarnings = [
    "ignore::DeprecationWarning"
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"