[tool.poetry]
name = "twon_agents"
version = "0.1.0"
description = ""
license = "Apache-2.0"
authors = [
    "Simon Münker <muenker@uni-trier.de>"
]
readme = "README.md"
homepage = "https://agents.twon.unit-trier.de"
repository = "https://github.com/cl-trier/TWON-Agents"

[tool.poetry.dependencies]
python = "^3.10.0"
jupyter = "^1.1.1"
pydantic = "^2.10.4"
pandas = "^2.2.0"
torch = "^2.5.1"
tqdm = "^4.66.1"
cltrier-lib = "^0.1.7"
transformers = "^4.47.1"
sentence-transformers = "^3.2.0"
huggingface-hub = "^0.27.0"
bitsandbytes = "^0.43.3"
evaluate = "^0.4.3"
peft = "^0.12.0"
trl = "^0.11.4"
seaborn = "^0.13.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"