[tool.poetry]
name = "twin_agents"
version = "0.1.0"
description = ""
license = "Apache-2.0"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10.0"
jupyter = "^1.1.1"
pydantic = "^2.10.4"
pandas = "^2.2.0"
torch = "^2.5.1"
tqdm = "^4.66.1"
cltrier-lib = "^0.1.7"
transformers = "^4.47.1"
sentence-transformers = "^3.2.0"
huggingface-hub = "^0.27.0"
bitsandbytes = "^0.43.3"
evaluate = "^0.4.3"
peft = "^0.12.0"
trl = "^0.11.4"
seaborn = "^0.13.2"
plotly = "^5.24.1"
scikit-learn = "^1.6.1"

[tool.poetry.group.dev.dependencies]
pylint = {extras = ["spelling"], version = "^3.3.4"}
pylint-pydantic = "^0.3.5"
ruff = "^0.9.4"
tensorboard = "^2.18.0"

[tool.pylint.MASTER]
load-plugins = [
    "pylint.extensions.code_style",
    "pylint.extensions.mccabe",
    "pylint_pydantic",
]


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"